Smooth collapse, preserve loaded table contents

--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1848,6 +1848,7 @@ $badge-item-min-height: 90px;
 		.embedded-search-view-outer-container {
 			margin-left: 20px;
 			margin-right: 20px;
+			padding-top: 24px;
 
 			.search-result-row {
 				&:last-of-type {
