Ongoing / remove Collapse on Status Overview

--- a/src/encoded/static/scss/encoded/_base.scss
+++ b/src/encoded/static/scss/encoded/_base.scss
@@ -97,7 +97,7 @@ $success:       #4C994C;
 $info:          #4ca6ea;
 $warning:       #E59545;
 $danger:        #B24342;
-$light:         #f8f9fa;
+$light:         #f8f8f8;
 $dark:          #343a40;
 
 // Ext:
