--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1967,6 +1967,10 @@ $badge-item-min-height: 90px;
 				box-shadow: 0 1px 5px #0002;
 				border-color: #d6d6d6;
 
+				&.qc-status {
+					font-size: 19px;
+				}
+
 				h2.section-header {
 					background-color: #2b6088;
 					width: calc( 100% + 40px);
@@ -1987,9 +1991,22 @@ $badge-item-min-height: 90px;
 						color: #ffffff;
 					}
 
+					.accession-table {
+						th {
+							font-weight: 600;
+							background-color: rgb(240,240,240);
+							padding: 4px;
+							border: 1px solid rgb(200,200,200);
+						}
+					}
+
 					.body .current-case {
 						background-color: lavender;
 					} 
+				}
+
+				.row.qc-summary {
+					padding: 2px 0;
 				}
 			}	
 		}
