--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -2225,7 +2225,7 @@ $badge-item-min-height: 90px;
 				@include media-breakpoint-up(md){
 					> .detail-pane-container {
 						.detail-pane-inner {
-							top: 0px;
+							top: 0px !important;
 						}
 					}
 				}
