--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1926,7 +1926,7 @@ $badge-item-min-height: 90px;
 					> button {
 						// TODO store color in variable, ideally bootstrap one, for re-use in places.
 						background-color: cornflowerblue;
-						transition: background-color .25s;
+						transition: background-color .25s, box-shadow .5s;
 						color: #ffff;
 						height: 100%;
 						display: block;
@@ -1935,6 +1935,7 @@ $badge-item-min-height: 90px;
 						text-decoration: none;
 						border: none;
 						width: 100%;
+						box-shadow: none;
 						&:focus,
 						&:active {
 							outline: none;
@@ -1991,6 +1992,7 @@ $badge-item-min-height: 90px;
 
 						> button {
 							background-color: darken($color: cornflowerblue, $amount: 15%) !important;
+							box-shadow: 0px 13px 16px -16px #000;
 						}
 						> .btn-append > svg > path,
 						> .btn-prepend > svg > path {
