--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1810,7 +1810,7 @@ $badge-item-min-height: 90px;
 		margin-left: 0;
 
 		div.pedigree-vis-heading {
-			background-color: #20445f;
+			background-color: $primary-dark; // previous value: $navbar-background-color (#20445f);
 			color: #ffffff;
 
 			// @include media-breakpoint-up(lg){
@@ -2088,7 +2088,7 @@ $badge-item-min-height: 90px;
 				}
 
 				h2.section-header {
-					background-color: #2b6088;
+					background-color: $primary-dark;
 					width: calc( 100% + 40px);
 					padding: 10px 10px 10px 20px;
 					color: #ffff;
@@ -2103,7 +2103,7 @@ $badge-item-min-height: 90px;
 
 				.stacked-block-table {
 					.stacked-block-table-headers {
-						background-color: #2b6088;
+						background-color: $primary-dark;
 						color: #ffffff;
 					}
 
