--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1897,9 +1897,8 @@ $badge-item-min-height: 90px;
 		.dot-tab-nav {
 			position: relative;
 			z-index: 5;
-			box-shadow: 0 -2px 7px -1px #0004;
-			border-top: 1px solid #999;
-			border-bottom: 1px solid #ccc;
+			border-top: 1px solid #ddd;
+			border-bottom: 1px solid #ddd;
 			
 
 			.dot-tab-nav-list {
