--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -2126,7 +2126,7 @@ $badge-item-min-height: 90px;
 						color: #ffffff;
 					}
 
-					.s-block.individual .col-individual * {
+					.s-block.individual .col-individual .individual-role {
 						text-align: left;
 					}
 				
