Minor styling stuff

--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1794,7 +1794,7 @@ $badge-item-min-height: 90px;
 
 	#case-overview-ped-link,
 	#cohort-overview-ped-link {
-		max-height: 336px;
+		/* max-height: 336px; */
 		margin-left: 0;
 
 		// > .card {
