--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -2383,6 +2383,34 @@ $badge-item-min-height: 90px;
 }
 
 
+
+/**********************************************************
+  VariantSampleView & similar - Annotation Space
+**********************************************************/
+
+
+.sample-variant-annotation-space-body {
+	.sample-variant-overview-tab-view-container {
+		.tabs-column {
+			//flex-grow: 0; // Will adjust via responsive Bootstrap classNames
+			//flex-shrink: 0;
+			> button.overview-tab {
+				height: 48px;
+				width: 100%;
+				display: block;
+				border: none;
+				margin-bottom: 5px;
+			}
+		}
+		.content-column {
+			flex-basis: 320px;
+			min-width: 320px;
+			flex-grow: 1;
+		}
+	}
+}
+
+
 /**********************************************************
 		User Profile Page
 ***********************************************************/
