--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -2394,6 +2394,7 @@ $badge-item-min-height: 90px;
 	.info-header-title {
 		display: flex;
 		align-items: center;
+		height: 42px;
 		> h4 {
 			font-weight: 600;
 			margin: 0;
