delete duplicate cohort styles; rename scss files

--- a/src/encoded/static/scss/encoded/_base.scss
+++ b/src/encoded/static/scss/encoded/_base.scss
@@ -39,7 +39,7 @@ $tabbar-bg-color : #ececec !default;
 $tabbar-text-color : #333 !default;
 $tabbar-text-active-color: #000 !default;
 $tabbar-bg-active-color: #fff !default;
-// If override this, check e.g. CohortView Pedigree Tab height dimensioning (JS) since this 46px is accounted for in calculations
+// If override this, check e.g. CaseView Pedigree Tab height dimensioning (JS) since this 46px is accounted for in calculations
 $tabbar-height: 46px;
 
 
