--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -123,7 +123,7 @@ $tabbar-bg-color : #ececec !default;
 $tabbar-text-color : #333 !default;
 $tabbar-text-active-color: #000 !default;
 $tabbar-bg-active-color: #fff !default;
-// If override this, check e.g. CohortView Pedigree Tab height dimensioning (JS) since this 46px is accounted for in calculations
+// If override this, check e.g. CaseView Pedigree Tab height dimensioning (JS) since this 46px is accounted for in calculations
 $tabbar-height: 46px;
 
 .item-page-container {
@@ -1712,13 +1712,12 @@ $badge-item-min-height: 90px;
 
 
 /**********************************************************
-			Processing Summary Table (CohortView)
+			Processing Summary Table (CaseView > Bioinfo Tab)
 **********************************************************/
 
 .item-page-container {
 
-	.case-summary-card-row,
-	.cohort-summary-card-row {
+	.case-summary-card-row{
 		display: flex;
 		flex-wrap: wrap;
 		margin: 0 -10px;
@@ -1748,7 +1747,6 @@ $badge-item-min-height: 90px;
 			flex-grow: 1;
 			flex-shrink: 0;
 			flex-basis: 100%;
-			> #cohort-stats,
 			> #case-stats {
 				min-height: 100%;
 			}
@@ -1792,8 +1790,7 @@ $badge-item-min-height: 90px;
 	
 	}
 
-	#case-overview-ped-link,
-	#cohort-overview-ped-link {
+	#case-overview-ped-link {
 		/* max-height: 336px; */
 		margin-left: 0;
 
@@ -2285,7 +2282,7 @@ $badge-item-min-height: 90px;
 
 
 /**********************************************************
-  PedigreeViz View Tab (CohortView, IndividualView, ...)
+  PedigreeViz View Tab (CaseView, IndividualView, ...)
 **********************************************************/
 
 .item-page-container {
