External Database links (DRAFT)

--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -2392,6 +2392,7 @@ $badge-item-min-height: 90px;
 .sample-variant-annotation-space-body {
 
 	.info-header-title {
+		// todo: iterate on this more once content in place, e.g. bottom margin, align-items, etc.
 		display: flex;
 		align-items: center;
 		height: 38px;
