--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -2392,7 +2392,8 @@ $badge-item-min-height: 90px;
 		// todo: iterate on this more once content in place, e.g. bottom margin, align-items, etc.
 		display: flex;
 		align-items: center;
-		height: 38px;
+		height: 30px;
+		margin-bottom: 10px;
 		> h4 {
 			// todo: maybe add color if to be just for this section (?)
 			font-weight: 600;
