--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1,3 +1,20 @@
+/**** VARIABLES ****/
+
+// We make this almost full height.
+// - IMPORTANT -
+// Equivalent of this is performed in JS in PedigreeViz, for browsers
+// which do not yet support calc().
+// If change size of footer, header, navbar, sub-navbar, etc. then this 216px must
+// be adjusted here and in JS
+// This is originally from PedigreeViz and now reused for places where we want a minimum height
+// to match full height of window, minus navbar, tabbar, and tab title heading.
+$inner-tab-contents-full-height: calc(100vh - 216px);
+
+/* used also for new utility class - not sure is best name */
+.mh-inner-tab-height-full {
+	min-height: $inner-tab-contents-full-height !important;
+}
+
 /***********************************************************
 Custom Classes & Styling for Item Pages (e.g. Experiment Sets)
 ************************************************************/
@@ -2298,7 +2315,7 @@ $badge-item-min-height: 90px;
 			// If change size of footer, header, navbar, sub-navbar, etc. then this 216px must
 			// be adjusted here and in JS
 			@include navbar-fixed-position {
-				min-height: calc(100vh - 216px) !important;
+				min-height: $inner-tab-contents-full-height !important;
 			}
 		}
 
