--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -2432,9 +2432,33 @@ $badge-item-min-height: 90px;
 				margin-bottom: 5px;
 				font-weight: 600;
 				border-radius: 0;
+				background-color: cornflowerblue; // $primary-dark;
+				color: #fff;
+				&[disabled]{
+					color: #fff8;
+				}
 				&[data-active="true"] {
-					background-color: $primary-dark;
-					color: #fff;
+					// background-color: $primary-dark;
+					// color: #fff;
+					@extend .card;
+					color: #000;
+					display: initial;
+					flex-direction: initial;
+					@include media-breakpoint-up(md){
+						border-top-right-radius: 0px;
+						border-top-right-radius: 0px;
+						&:after {
+							content: "";
+							position: absolute;
+							top: 0;
+							bottom: 0;
+							right: -3px;
+							width: 5px;
+							background-color: inherit;
+							border-top-right-radius: 0px;
+							border-bottom-right-radius: 0px;
+						}
+					}
 				}
 			}
 		}
